# PALEO-FUTURA

./: CITATION.cff  README.md  README_USAGE_SECTION.md  pyproject.toml  requirements.txt
docs/: ai_usage.md  architecture.md  concept.md  design_principles.md  file_formats.md  first_use_case_CAMTA.md  futura.md  identity.md  paleo.md  roadmap.md  scientific_boundaries.md  v0.1_functional_core.md  validation_strategy.md
examples/futura_salinity_demo/: README.md  gene_features.csv
examples/paleo_camta_demo/: README.md
examples/toy_gene_family/: orthogroups.csv  toy_proteins.faa
paleo_futura/: __init__.py  cli.py
paleo_futura/futura/: features.py  report.py  scenarios.py  scoring.py  simulations.py
paleo_futura/paleo/: alignments.py  ancestral.py  orthogroups.py  report.py  selection.py  trees.py
paleo_futura/utils/: fasta.py  gff.py  logging.py  tables.py  uncertainty.py
tests/: test_cli.py  test_futura.py  test_paleo.py  test_uncertainty.py
workflows/: futura_demo.smk  paleo_demo.smk
