[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paleo-futura"
version = "0.1.0"
description = "AI-assisted evolutionary genomics framework for ancestral inference and future evolutionary forecasting."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Adhityo Wicaksono"}
]
dependencies = [
  "biopython>=1.83",
  "pandas>=2.0",
  "numpy>=1.24",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "tabulate>=0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[project.scripts]
paleo-futura = "paleo_futura.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["paleo_futura*"]
exclude = ["assets*", "docs*", "examples*", "tests*", "workflows*"]
